# CLionProjectSample

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp
test/: CMakeLists.txt  CalculatorTest.cpp
